# EAST_Tensorflow_C

./: CMakeLists.txt  README.md
config/: east.ini
include/: east.hpp  east_base.hpp  lanms.h  util.hpp
src/: CMakeLists.txt  east.cpp  ini.cpp  util.cpp
test/: CMakeLists.txt  test.cpp
